# doctotext

./: CMakeLists.txt  build.ps1  build.sh
.github/workflows/: build.yml
doc/: ChangeLog
ports/docwire/: portfile.cmake  vcpkg.json
src/: ocr_parser.cpp  ocr_parser.h  odf_ooxml_parser.cpp  pdf_parser.cpp
tests/: CMakeLists.txt
